fixed the footer image cropping

--- a/index.css
+++ b/index.css
@@ -92,11 +92,6 @@ footer {
     background: #F9E7DC;
 }
 
-/* footer img {
-    width: 100%;
-    height: 300px;
-} */
-
 
 #img-container {
     box-sizing: border-box;
@@ -108,6 +103,8 @@ footer {
     width: 100%;
     height: 100%;
     overflow: none;
+    object-fit: cover;
+    object-position: 70% 25%;
 }
 
 header img {
